# mnn

./: CMakeLists.txt  README.md
cmake/: summary.cmake
example/: CMakeLists.txt
example/alexnet/: CMakeLists.txt  alexnet.cc
example/mnist/: CMakeLists.txt  mnist_parser.cc  mnist_parser.h  mnist_train.cc  mnist_train.cpp
include/mnn/: mnn.h
include/mnn/core/activation/: activation_layer.h  relu_layer.h  sigmoid_layer.h  softmax_layer.h  tanh_layer.h
include/mnn/core/graph/: edge.h  network.h  node.h  node_list.h  nodes.h  op_kernel.h  sequential.h  tensor.h
include/mnn/core/layer/: average_pooling_layer.h  convolutional_layer.h  fully_connected_layer.h  layer.h  partial_connected_layer.h
include/mnn/core/loss/: apply_grad.h  cross_entropy.h  mse.h
include/mnn/core/optimizer/: adagrad.h  adam.h  gradient_descent.h  optimizer.h  stateful_optimizer.h
include/mnn/core/params/: conv_params.h  fully_params.h  maxpool_params.h  params.h
include/mnn/infra/: aligned_allocator.h  backend.h  config.h  macro.h  mnn_error.h  nn_error.h  parallel_for.h  product.h  random.h  text_progress.h  timer.h  util.h  weight_init.h
include/mnn/kernel/cpu/: conv2d_op_cpu.h  fully_connected_op_cpu.h
include/mnn/kernel/gpu/: conv2d_op_gpu.h  fully_connected_op_gpu.h
include/mnn/op/: conv2d_grad_op.h  conv2d_op.h  fully_connected_grad_op.h  fully_connected_op.h
src/mnn/core/activation/: activation_layer.cc  relu_layer.cc  sigmoid_layer.cc  softmax_layer.cc  tanh_layer.cc
src/mnn/core/graph/: edge.cc  node.cc  node_list.cc  nodes.cc  sequential.cc
src/mnn/core/layer/: average_pooling_layer.cc  convolutional_layer.cc  fully_connected_layer.cc  layer.cc  partial_connected_layer.cc
src/mnn/core/loss/: apply_grad.cc  cross_entropy.cc  mse.cc
src/mnn/core/optimizer/: adagrad.cc  adam.cc  gradient_descent.cc
src/mnn/core/params/: conv_params.cc
src/mnn/infra/: text_progress.cc  timer.cc
src/mnn/kernel/cpu/: conv2d_op_cpu.cc  fully_connected_op_cpu.cc
src/mnn/kernel/gpu/: conv2d_op_gpu.cc  fully_connected_op_gpu.cc
src/mnn/op/: conv2d_grad_op.cc  conv2d_op.cc  fully_connected_grad_op.cc  fully_connected_op.cc
